# tampermonkey_script

./: .gitignore  bilibili-live-no-p2p.user.js  pyproject.toml  weibo-clean-feed.test.js  weibo-clean-feed.user.js
skills/genericagent-browser-control/: SKILL.md  requirements.txt
skills/genericagent-browser-control/agents/: openai.yaml
skills/genericagent-browser-control/assets/tmwd_cdp_bridge/: background.js  config.js  content.js  cookie_utils.js  manifest.json  popup.html  popup.js
skills/genericagent-browser-control/references/: setup-and-usage.md  upstream-findings.md
skills/genericagent-browser-control/scripts/: _bootstrap.py  doctor.ps1  exec_js.py  scan_page.py  setup_extension.ps1  setup_venv.ps1  start_bridge.py
skills/genericagent-browser-control/src/genericagent_browser_control/: __init__.py  bridge.py  cli_output.py  exec_js.py  html_scan.py  result_format.py  runtime.py
tests/skills/genericagent_browser_control/: test_cli_output.py  test_cli_scripts.py  test_cookie_utils.js  test_exec_js.py  test_extension_js.py  test_html_scan.py  test_runtime_layout.py
tts_server_plugin/: doubao.js  mimo.js
