[project]
name = "genericagent-browser-control-skill"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "bottle>=0.12",
    "requests>=2.32",
    "simple-websocket-server>=0.4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "skills/genericagent-browser-control/src",
]
addopts = "-p no:cacheprovider"
